IsisPreferences was modified so TerminalOutput=On. Many app tests needed to be modified to work with this change. Pipeline is still failing. Fixed #2050.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5750 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollopaninit/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollopaninit/tsts/default/Makefile
@@ -16,5 +16,5 @@ commands:
 		VEL_AZM = 292.6602745 \
 		VEL_HORIZ = 1.6212918 \
 		VEL_RADIAL = -0.0056892 > /dev/null;
-	catlab from=$(OUTPUT)/apolloPanImage.cub > $(OUTPUT)/label.pvl;
+	catlab from=$(OUTPUT)/apolloPanImage.cub to=$(OUTPUT)/label.pvl > /dev/null;
 	$(RM) $(OUTPUT)/apolloPanImage.cub > /dev/null;
