--- a/isis/src/base/apps/automos/tsts/nominmax/Makefile
+++ b/isis/src/base/apps/automos/tsts/nominmax/Makefile
@@ -7,6 +7,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	ls $(INPUT)/*.cub > $(OUTPUT)/inputlist.txt;                                           \
 	$(APPNAME) fromlist=$(OUTPUT)/inputlist.txt mos=$(OUTPUT)/mos.cub > /dev/null;         \
-	catlab from=$(OUTPUT)/mos.cub > $(OUTPUT)/mos.txt;                                     \
+	catlab from=$(OUTPUT)/mos.cub to=$(OUTPUT)/mos.txt > /dev/null;                                     \
 	$(RM) $(OUTPUT)/mos.cub;                                                               \
 	$(RM) $(OUTPUT)/inputlist.txt;
