--- a/isis/src/base/apps/catlab/tsts/case01/Makefile
+++ b/isis/src/base/apps/catlab/tsts/case01/Makefile
@@ -3,4 +3,4 @@ APPNAME = catlab
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/isisTruth.cub+1 > $(OUTPUT)/standardOutTruth1.txt;
+	$(APPNAME) from=$(INPUT)/isisTruth.cub+1 to=$(OUTPUT)/standardOutTruth1.txt > /dev/null;
