--- a/isis/src/base/apps/maplab/tsts/case01/Makefile
+++ b/isis/src/base/apps/maplab/tsts/case01/Makefile
@@ -4,16 +4,15 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/maplabInput.cub $(OUTPUT)/maplabOutput11.cub
-	catlab from=$(OUTPUT)/maplabOutput11.cub >& $(OUTPUT)/tempLab.txt;
-	head -n 101 $(OUTPUT)/tempLab.txt > $(OUTPUT)/origLabel1.txt;
 	$(APPNAME) from= $(OUTPUT)/maplabOutput11.cub \
 	  map = $(INPUT)/mapFile.map \
 	  x =  -395500.0 \
 	  y =  2019500.0 \
 	  line = 23.0 \
 	  sample = 85.0;
-	  catlab from=$(OUTPUT)/maplabOutput11.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth11.txt;
+	catlab from=$(OUTPUT)/maplabOutput11.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth11.pvl;
+	rm $(OUTPUT)/tempLab.txt
 	cp $(INPUT)/maplabInput.cub $(OUTPUT)/maplabOutput12.cub
 	$(APPNAME) from= $(OUTPUT)/maplabOutput12.cub \
 	  map = $(INPUT)/mapFile.map \
@@ -22,6 +21,6 @@ commands:
 	  lon = 219.90185944016 \
 	  line = 23.0 \
 	  sample = 85.0 ;
-	  catlab from=$(OUTPUT)/maplabOutput12.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth12.txt;
-	  rm $(OUTPUT)/tempLab.txt
+	catlab from=$(OUTPUT)/maplabOutput12.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth12.pvl;
+	rm $(OUTPUT)/tempLab.txt
