--- a/isis/src/base/apps/maplab/tsts/case02/Makefile
+++ b/isis/src/base/apps/maplab/tsts/case02/Makefile
@@ -4,16 +4,15 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/maplabInput2.cub $(OUTPUT)/maplabOutput21.cub
-	catlab from=$(OUTPUT)/maplabOutput21.cub >& $(OUTPUT)/tempLab.txt;
-	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/origLabel2.txt;
 	$(APPNAME) from= $(OUTPUT)/maplabOutput21.cub \
 	  map = $(INPUT)/mapFile.map \
 	  x =  -3000.0 \
 	  y =  201.0 \
 	  line = 23.0 \
-	  sample = 85.0 ;
-	  catlab from=$(OUTPUT)/maplabOutput21.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth21.txt;
+	  sample = 85.0;
+	catlab from=$(OUTPUT)/maplabOutput21.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth21.pvl;
+	rm $(OUTPUT)/tempLab.txt;
 	cp $(INPUT)/maplabInput2.cub $(OUTPUT)/maplabOutput22.cub
 	  $(APPNAME) from= $(OUTPUT)/maplabOutput22.cub \
 	  map = $(INPUT)/mapFile.map \
@@ -22,6 +21,6 @@ commands:
 	  lon = 42.0 \
 	  line = 23.0 \
 	  sample = 85.0;
-	  catlab from=$(OUTPUT)/maplabOutput22.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth22.txt;
-	  rm $(OUTPUT)/tempLab.txt
+	catlab from=$(OUTPUT)/maplabOutput22.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth22.pvl;
+	rm $(OUTPUT)/tempLab.txt;
