--- a/isis/src/base/apps/maplab/tsts/case03/Makefile
+++ b/isis/src/base/apps/maplab/tsts/case03/Makefile
@@ -4,16 +4,15 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/maplabInput3.cub $(OUTPUT)/maplabOutput31.cub
-	catlab from=$(OUTPUT)/maplabOutput31.cub >& $(OUTPUT)/tempLab.txt;
-	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/origLabel3.txt;
 	$(APPNAME) from= $(OUTPUT)/maplabOutput31.cub \
 	  map = $(INPUT)/mapFile.map \
 	  x =  -3000.0 \
 	  y =  201.0 \
 	  line = 23.0 \
 	  sample = 85.0 ;
-	  catlab from=$(OUTPUT)/maplabOutput31.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth31.txt;
+	catlab from=$(OUTPUT)/maplabOutput31.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth31.pvl;
+	rm $(OUTPUT)/tempLab.txt;
 	cp $(INPUT)/maplabInput3.cub $(OUTPUT)/maplabOutput32.cub
 	  $(APPNAME) from= $(OUTPUT)/maplabOutput32.cub \
 	  map = $(INPUT)/mapFile.map \
@@ -22,6 +21,6 @@ commands:
 	  lon = 42.0 \
 	  line = 23.0 \
 	  sample = 85.0;
-	  catlab from=$(OUTPUT)/maplabOutput32.cub >& $(OUTPUT)/tempLab.txt;
-	  head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth32.txt;
-	  rm $(OUTPUT)/tempLab.txt
+	catlab from=$(OUTPUT)/maplabOutput32.cub to=$(OUTPUT)/tempLab.txt > /dev/null;
+	head -n 121 $(OUTPUT)/tempLab.txt > $(OUTPUT)/maplabTruth32.pvl;
+	rm $(OUTPUT)/tempLab.txt;
