--- a/isis/src/base/apps/std2isis/tsts/default/Makefile
+++ b/isis/src/base/apps/std2isis/tsts/default/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/in.png TO=$(OUTPUT)/out.cub \
 	> /dev/null;
-	catlab from=$(OUTPUT)/out.cub > $(OUTPUT)/outLabel.pvl;
+	catlab from=$(OUTPUT)/out.cub to=$(OUTPUT)/outLabel.pvl > /dev/null;
