--- a/isis/src/cassini/apps/ciss2isis/tsts/narrowAngle/Makefile
+++ b/isis/src/cassini/apps/ciss2isis/tsts/narrowAngle/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/N1472853667_1.LBL \
 	to=$(OUTPUT)/N1472853667_1.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/N1472853667_1.truth.cub >& $(OUTPUT)/labels.txt;
+	catlab from=$(OUTPUT)/N1472853667_1.truth.cub to=$(OUTPUT)/labels.txt > /dev/null;
