--- a/isis/src/cassini/apps/ciss2isis/tsts/wideAngle/Makefile
+++ b/isis/src/cassini/apps/ciss2isis/tsts/wideAngle/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/W1472855646_5.LBL \
 	TO=$(OUTPUT)/W1472855646_5.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/W1472855646_5.truth.cub >& $(OUTPUT)/labels.txt;
+	catlab from=$(OUTPUT)/W1472855646_5.truth.cub to=$(OUTPUT)/labels.txt > /dev/null;
