--- a/isis/src/clementine/apps/clem2isis/tsts/default/Makefile
+++ b/isis/src/clementine/apps/clem2isis/tsts/default/Makefile
@@ -9,8 +9,8 @@ commands:
 	 $(APPNAME) from=$(INPUT)/lua1855j.310 \
          to=$(OUTPUT)/lua1855j.truth.cub > /dev/null;
 	 $(RM) paramtrs.dat;
-	 catlab from=$(OUTPUT)/lua1855j.truth.cub >& $(OUTPUT)/uvvisLabels.txt;
+	 catlab from=$(OUTPUT)/lua1855j.truth.cub to=$(OUTPUT)/uvvisLabels.txt > /dev/null;
 	 $(APPNAME) from=$(INPUT)/lna3056k.284 \
          to=$(OUTPUT)/lna3056k.truth.cub > /dev/null;
 	 $(RM) paramtrs.dat;
-	 catlab from=$(OUTPUT)/lna3056k.truth.cub >& $(OUTPUT)/nirLabels.txt;
+	 catlab from=$(OUTPUT)/lna3056k.truth.cub to=$(OUTPUT)/nirLabels.txt > /dev/null;
