--- a/isis/src/dawn/apps/dawnfc2isis/tsts/case01/Makefile
+++ b/isis/src/dawn/apps/dawnfc2isis/tsts/case01/Makefile
@@ -7,5 +7,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/FC21B0001010_09049002212F5D.IMG \
 	  to=$(OUTPUT)/FC21B0001010_09049002212F5D.cub > /dev/null;
-	  catlab from=$(OUTPUT)/FC21B0001010_09049002212F5D.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/FC21B0001010_09049002212F5D.cub to=$(OUTPUT)/labels.txt > /dev/null;
 
