--- a/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
+++ b/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
@@ -8,6 +8,6 @@ commands:
 	$(APPNAME) from=$(INPUT)/VIR_VIS_1A_1_362681635_1.LBL \
          to=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub > /dev/null;
 	catlab from=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub  \
-	  > $(OUTPUT)/labels.pvl;
+	  to=$(OUTPUT)/labels.pvl > /dev/null;
 	tabledump from=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub \
-	  to=$(OUTPUT)/table.txt name=VIRHouseKeeping;
+	  to=$(OUTPUT)/table.txt name=VIRHouseKeeping > /dev/null;
