--- a/isis/src/galileo/apps/gllssi2isis/tsts/case03/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/case03/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/3700R.LBL \
 	TO=$(OUTPUT)/3700R.cub > /dev/null;
-	catlab FROM=$(OUTPUT)/3700R.cub > $(OUTPUT)/3700R.txt;
+	catlab FROM=$(OUTPUT)/3700R.cub to=$(OUTPUT)/3700R.txt > /dev/null;
