--- a/isis/src/galileo/apps/gllssi2isis/tsts/go_0022_I24_IO_repairedImage/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/go_0022_I24_IO_repairedImage/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	 $(APPNAME) from=$(INPUT)/8500s.lbl \
 	  to=$(OUTPUT)/8500s.cub > /dev/null;
-	  catlab from=$(OUTPUT)/8500s.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/8500s.cub to=$(OUTPUT)/labels.txt > /dev/null;
