--- a/isis/src/hayabusa/apps/amica2isis/tsts/lamp/Makefile
+++ b/isis/src/hayabusa/apps/amica2isis/tsts/lamp/Makefile
@@ -6,4 +6,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/st_0015411418_w.lbl \
 	  to=$(OUTPUT)/st_0015411418_w.cub > /dev/null
-	catlab from=$(OUTPUT)/st_0015411418_w.cub to=$(OUTPUT)/st_0015411418_w.pvl > /dev/null
+	catlab from=$(OUTPUT)/st_0015411418_w.cub to=$(OUTPUT)/st_0015411418_w.pvl > /dev/null;
