--- a/isis/src/kaguya/apps/kaguyatc2isis/tsts/v04_1/Makefile
+++ b/isis/src/kaguya/apps/kaguyatc2isis/tsts/v04_1/Makefile
@@ -8,4 +8,4 @@ commands:
 	$(APPNAME) from=$(INPUT)/TCO_MAPe04_N39E129N36E132SC.img \
 	  to=$(OUTPUT)/tco_k2i_16bit_testing_132sc_spx.cub+16bit+-327.525:327.675 \
 	  setnullrange=yes nullmin=0 nullmax=0 > /dev/null;
-	  catlab from=$(OUTPUT)/tco_k2i_16bit_testing_132sc_spx.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/tco_k2i_16bit_testing_132sc_spx.cub to=$(OUTPUT)/labels.txt > /dev/null;
