--- a/isis/src/kaguya/apps/mimap2isis/tsts/default/Makefile
+++ b/isis/src/kaguya/apps/mimap2isis/tsts/default/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/MI_MAP_02_N65E328N64E329SC.img \
 	  to=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub > /dev/null;
-	  catlab from=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub to=$(OUTPUT)/labels.txt > /dev/null;
