--- a/isis/src/lo/apps/lo2isis/tsts/case02/Makefile
+++ b/isis/src/lo/apps/lo2isis/tsts/case02/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/4164H_Full_mirror.cub \
 	to=$(OUTPUT)/4164H_Full_mirror.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/4164H_Full_mirror.truth.cub >& $(OUTPUT)/labels.pvl;
+	catlab from=$(OUTPUT)/4164H_Full_mirror.truth.cub to=$(OUTPUT)/labels.pvl > /dev/null;
