--- a/isis/src/messenger/apps/mdiscal/tsts/default/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/default/Makefile
@@ -4,15 +4,15 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub to=$(OUTPUT)/default.cub iof=no > /dev/null;
-	catlab FROM=$(OUTPUT)/default.cub > $(OUTPUT)/default_label.pvl;
+	catlab FROM=$(OUTPUT)/default.cub to=$(OUTPUT)/default_label.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub to=$(OUTPUT)/nodark.cub DARKCURRENT=none iof=no > /dev/null;
-	catlab FROM=$(OUTPUT)/nodark.cub > $(OUTPUT)/nodark_label.pvl;
+	catlab FROM=$(OUTPUT)/nodark.cub to=$(OUTPUT)/nodark_label.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub to=$(OUTPUT)/lineardark.cub DARKCURRENT=linear iof=no > /dev/null;
-	catlab FROM=$(OUTPUT)/lineardark.cub > $(OUTPUT)/lineardark_label.pvl;
+	catlab FROM=$(OUTPUT)/lineardark.cub to=$(OUTPUT)/lineardark_label.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub to=$(OUTPUT)/standarddark.cub DARKCURRENT=standard iof=no > /dev/null;
-	catlab FROM=$(OUTPUT)/standarddark.cub > $(OUTPUT)/standarddark_label.pvl;
+	catlab FROM=$(OUTPUT)/standarddark.cub to=$(OUTPUT)/standarddark_label.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub KEEPDARK=true to=$(OUTPUT)/keepdark.cub iof=no > /dev/null;
-	catlab FROM=$(OUTPUT)/keepdark.cub > $(OUTPUT)/keepdark_label.pvl;
+	catlab FROM=$(OUTPUT)/keepdark.cub to=$(OUTPUT)/keepdark_label.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/EW0089565626A.cub to=$(OUTPUT)/iof.cub > /dev/null;
-	catlab FROM=$(OUTPUT)/iof.cub > $(OUTPUT)/iof_label.pvl;
+	catlab FROM=$(OUTPUT)/iof.cub to=$(OUTPUT)/iof_label.pvl > /dev/null;
 
