--- a/isis/src/mro/apps/hicrop/tsts/cropByCk/Makefile
+++ b/isis/src/mro/apps/hicrop/tsts/cropByCk/Makefile
@@ -17,9 +17,9 @@ commands:
 	ck=$(INPUT)/mro_sc_psp_080513_080519_hijitterMaster5.bc \
 	to=$(OUTPUT)/cropped1.cub \
 	source=ck >& $(OUTPUT)/resultsLog1.txt;
-	catlab from=$(OUTPUT)/cropped1.cub to=$(OUTPUT)/croppedLabel1.pvl;
+	catlab from=$(OUTPUT)/cropped1.cub to=$(OUTPUT)/croppedLabel1.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/PSP_008469_2040_RED6.balance.cub \
 	ck=$(INPUT)/mro_sc_psp_080513_080519.bc \
 	to=$(OUTPUT)/cropped2.cub \
 	source=ck >& $(OUTPUT)/resultsLog2.txt;
-	catlab from=$(OUTPUT)/cropped2.cub to=$(OUTPUT)/croppedLabel2.pvl;
+	catlab from=$(OUTPUT)/cropped2.cub to=$(OUTPUT)/croppedLabel2.pvl > /dev/null;
