--- a/isis/src/mro/apps/hirdrgen/tsts/color/Makefile
+++ b/isis/src/mro/apps/hirdrgen/tsts/color/Makefile
@@ -7,7 +7,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/test_color_070419.cub \
 	           to=$(OUTPUT)/test_color_070419.img version=3.0> /dev/null;
 	catlab from=$(OUTPUT)/test_color_070419.img \
-		> $(OUTPUT)/test_color_070419_imglabels.pvl;
+		to=$(OUTPUT)/test_color_070419_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_color_070419.img \
 	         to=$(OUTPUT)/test_color_070419_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_color_070419.img;
