--- a/isis/src/mro/apps/marci2isis/tsts/coloroffset/Makefile
+++ b/isis/src/mro/apps/marci2isis/tsts/coloroffset/Makefile
@@ -5,14 +5,14 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/T02_001251_1292_MU_00N237W.IMG \
 	TO=$(OUTPUT)/nooffset.cub COLOROFFSET=false > /dev/null;
-	catlab FROM=$(OUTPUT)/nooffset.even.cub > $(OUTPUT)/nooffset.pvl;
+	catlab FROM=$(OUTPUT)/nooffset.even.cub to=$(OUTPUT)/nooffset.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/T02_001251_1292_MU_00N237W.IMG \
 	TO=$(OUTPUT)/offset1.cub COLOROFFSET_SIZE=1 > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/T02_001251_1292_MU_00N237W.IMG \
 	TO=$(OUTPUT)/offset2.cub COLOROFFSET_SIZE=2 > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/T02_001251_1292_MU_00N237W.IMG \
 	TO=$(OUTPUT)/offset3.cub COLOROFFSET_SIZE=3 > /dev/null;
-	catlab FROM=$(OUTPUT)/offset3.odd.cub > $(OUTPUT)/offset3.pvl;
+	catlab FROM=$(OUTPUT)/offset3.odd.cub to=$(OUTPUT)/offset3.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/T02_001251_1292_MU_00N237W.IMG \
 	TO=$(OUTPUT)/flipped.cub FLIP=yes \
 	COLOROFFSET_SIZE=3 > /dev/null;
