--- a/isis/src/newhorizons/apps/lorri2isis/tsts/raw/Makefile
+++ b/isis/src/newhorizons/apps/lorri2isis/tsts/raw/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/lor_0035140199_0x630_eng_1.fit \
 	  to=$(OUTPUT)/lor_0035140199_0x630_eng_1.cub \
 	  > /dev/null;
-	catlab from=$(OUTPUT)/lor_0035140199_0x630_eng_1.cub > \
-	  $(OUTPUT)/lor_0035140199_0x630_eng_1.pvl;
+	catlab from=$(OUTPUT)/lor_0035140199_0x630_eng_1.cub \
+	  to=$(OUTPUT)/lor_0035140199_0x630_eng_1.pvl> /dev/null;
 
 
