--- a/isis/src/rolo/apps/rolo2isis/tsts/default/Makefile
+++ b/isis/src/rolo/apps/rolo2isis/tsts/default/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/mm185801.alx \
 	  to=$(OUTPUT)/mm185801.cub > /dev/null;
-	  catlab from=$(OUTPUT)/mm185801.cub >& $(OUTPUT)/labels.pvl;
+	  catlab from=$(OUTPUT)/mm185801.cub to=$(OUTPUT)/labels.pvl > /dev/null;
