--- a/isis/src/voyager/apps/voy2isis/tsts/importIMQ/Makefile
+++ b/isis/src/voyager/apps/voy2isis/tsts/importIMQ/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/c1856306.imq \
 	to=$(OUTPUT)/c1856306.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/c1856306.truth.cub >& $(OUTPUT)/c1856306.labels.pvl;
+	catlab from=$(OUTPUT)/c1856306.truth.cub to=$(OUTPUT)/c1856306.labels.pvl> /dev/null;
