--- a/isis/src/base/apps/pds2isis/tsts/default/Makefile
+++ b/isis/src/base/apps/pds2isis/tsts/default/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/ab102401.img \
 	  to=$(OUTPUT)/pds2isisTruth.cub > /dev/null;
-	  catlab from=$(OUTPUT)/pds2isisTruth.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/pds2isisTruth.cub to=$(OUTPUT)/labels.txt> /dev/null;
