--- a/isis/src/base/apps/reduce/tsts/averageOn/Makefile
+++ b/isis/src/base/apps/reduce/tsts/averageOn/Makefile
@@ -12,11 +12,11 @@ commands:
 	  mode=total \
 	  ons=100 \
 	  onl=100 > /dev/null;
-	catlab from=$(OUTPUT)/reduceTruth3.cub > $(OUTPUT)/labels3.txt;
+	catlab from=$(OUTPUT)/reduceTruth3.cub  to=$(OUTPUT)/labels3.txt > /dev/null;
 	$(APPNAME) from= $(OUTPUT)/reduceTruth3.cub \
           to= $(OUTPUT)/reduceTruth6.cub \
           algorithm=average \
 	  mode=total \
 	  ons=50 \
           onl=50 > /dev/null;
-	catlab from=$(OUTPUT)/reduceTruth6.cub > $(OUTPUT)/labels6.txt;
+	catlab from=$(OUTPUT)/reduceTruth6.cub to=$(OUTPUT)/labels6.txt > /dev/null;
