--- a/isis/src/base/apps/spiceinit/tsts/ckConfigFile/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/ckConfigFile/Makefile
@@ -9,7 +9,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(CP) $(INPUT)/frt0001cfd8_07_if124s_trr3_b24.cub $(OUTPUT)/spiceinitTruth.cub > /dev/null;
 	$(APPNAME) from=$(OUTPUT)/spiceinitTruth.cub > /dev/null;
-	catlab from=$(OUTPUT)/spiceinitTruth.cub > $(OUTPUT)/label.pvl;
+	catlab from=$(OUTPUT)/spiceinitTruth.cub to=$(OUTPUT)/label.pvl > /dev/null;
 	$(SED) 's+mro/kernels/sclk/MRO_SCLKSCET.*tsc+mro/kernels/sclk/MRO_SCLKSCET.tsc+g' $(OUTPUT)/label.pvl > $(OUTPUT)/labels.pvl;
 	rm $(OUTPUT)/spiceinitTruth.cub;
 	rm $(OUTPUT)/label.pvl;
