--- a/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
@@ -11,7 +11,7 @@ commands:
 	attach=no \
 	cknadir=yes \
 	tspk='$$base/kernels/spk/de405.bsp' > /dev/null;
-	catlab from=$(OUTPUT)/nadirTruth.cub to=$(OUTPUT)/labels.pvl;
+	catlab from=$(OUTPUT)/nadirTruth.cub to=$(OUTPUT)/labels.pvl > /dev/null;
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no \
 	tspk='$$base/kernels/spk/de405.bsp' >& $(OUTPUT)/error.txt || true;
 	rm $(OUTPUT)/nadirTruth.cub;
