--- a/isis/src/hayabusa/apps/amica2isis/tsts/mars/Makefile
+++ b/isis/src/hayabusa/apps/amica2isis/tsts/mars/Makefile
@@ -6,4 +6,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/st_0515854093_p.lbl \
 	  to=$(OUTPUT)/st_0515854093_p.cub > /dev/null
-	catlab from=$(OUTPUT)/st_0515854093_p.cub to=$(OUTPUT)/st_0515854093_p.pvl > /dev/null
+	catlab from=$(OUTPUT)/st_0515854093_p.cub to=$(OUTPUT)/st_0515854093_p.pvl > /dev/null;
