--- a/isis/src/kaguya/apps/kaguyatc2isis/tsts/default/Makefile
+++ b/isis/src/kaguya/apps/kaguyatc2isis/tsts/default/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/TC_EVE_02_S09E000S12E003SC.img \
 	  to=$(OUTPUT)/kaguyatcTruth.cub > /dev/null;
-	  catlab from=$(OUTPUT)/kaguyatcTruth.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/kaguyatcTruth.cub to=$(OUTPUT)/labels.txt > /dev/null;
