--- a/isis/src/lo/apps/lo2isis/tsts/case01/Makefile
+++ b/isis/src/lo/apps/lo2isis/tsts/case01/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/3133_h1.cub \
 	to=$(OUTPUT)/3133_h1.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/3133_h1.truth.cub >& $(OUTPUT)/labels.pvl;
+	catlab from=$(OUTPUT)/3133_h1.truth.cub to=$(OUTPUT)/labels.pvl > /dev/null;
