--- a/isis/src/lo/apps/lo2isis/tsts/case03/Makefile
+++ b/isis/src/lo/apps/lo2isis/tsts/case03/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/3083_med_tohi_isis2.cub \
 	to=$(OUTPUT)/3083_med_tohi.truth.cub > /dev/null;
-	catlab from=$(OUTPUT)/3083_med_tohi.truth.cub >& $(OUTPUT)/labels.pvl;
+	catlab from=$(OUTPUT)/3083_med_tohi.truth.cub to=$(OUTPUT)/labels.pvl > /dev/null;
