--- a/isis/src/mro/apps/hicolormos/tsts/case01/Makefile
+++ b/isis/src/mro/apps/hicolormos/tsts/case01/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from1=$(INPUT)/test_hicubeitOUT_sinu_070419.cub \
 	           to=$(OUTPUT)/test_hicolormos.cub > /dev/null;
-	catlab from=$(OUTPUT)/test_hicolormos.cub > $(OUTPUT)/hicolormos.pvl;  
+	catlab from=$(OUTPUT)/test_hicolormos.cub to=$(OUTPUT)/hicolormos.pvl > /dev/null;
