--- a/isis/src/mro/apps/hicubeit/tsts/default/Makefile
+++ b/isis/src/mro/apps/hicubeit/tsts/default/Makefile
@@ -6,4 +6,4 @@ commands:
 	$(APPNAME) RED=$(INPUT)/RED4slither.cub \
 	IR=$(INPUT)/IR10slither.cub BG=$(INPUT)/BG12slither.cub \
 	TO=$(OUTPUT)/slither.cub  > /dev/null;
-	catlab FROM=$(OUTPUT)/slither.cub >& $(OUTPUT)/slither.pvl;
+	catlab FROM=$(OUTPUT)/slither.cub to=$(OUTPUT)/slither.pvl > /dev/null;
