--- a/isis/src/mro/apps/hirdrgen/tsts/manual/Makefile
+++ b/isis/src/mro/apps/hirdrgen/tsts/manual/Makefile
@@ -11,7 +11,7 @@ commands:
 		   min=0.0265114 max=0.107671 version=2.0 \
 	           rationale='Testing123' > /dev/null;
 	catlab from=$(OUTPUT)/test_himos_070418.img \
-		> $(OUTPUT)/test_himos_070418_imglabels.pvl;
+		to=$(OUTPUT)/test_himos_070418_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_himos_070418.img \
 	         to=$(OUTPUT)/test_himos_070418_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_himos_070418.img;
@@ -20,7 +20,7 @@ commands:
 	           to=$(OUTPUT)/test_himos_polar_070508.img bits=8 type=manual \
 		   min=0.0359667 max=0.0931104> /dev/null;
 	catlab from=$(OUTPUT)/test_himos_polar_070508.img \
-		> $(OUTPUT)/test_himos_polar_070508_imglabels.pvl;
+		to=$(OUTPUT)/test_himos_polar_070508_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_himos_polar_070508.img \
 	         to=$(OUTPUT)/test_himos_polar_070508_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_himos_polar_070508.img;
