--- a/isis/src/mro/apps/hirdrgen/tsts/red/Makefile
+++ b/isis/src/mro/apps/hirdrgen/tsts/red/Makefile
@@ -10,7 +10,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/test_himos_070418.cub \
 	           to=$(OUTPUT)/test_himos_070418.img > /dev/null;
 	catlab from=$(OUTPUT)/test_himos_070418.img \
-		> $(OUTPUT)/test_himos_070418_imglabels.pvl;
+		to=$(OUTPUT)/test_himos_070418_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_himos_070418.img \
 	         to=$(OUTPUT)/test_himos_070418_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_himos_070418.img;
@@ -18,7 +18,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/test_himos_070418.cub \
 	           to=$(OUTPUT)/test_himos_070418_16.img bits=16 > /dev/null;
 	catlab from=$(OUTPUT)/test_himos_070418_16.img \
-		> $(OUTPUT)/test_himos_070418_16_imglabels.pvl;
+		to=$(OUTPUT)/test_himos_070418_16_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_himos_070418_16.img \
 	         to=$(OUTPUT)/test_himos_070418_16_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_himos_070418_16.img;
@@ -26,7 +26,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/test_himos_polar_070508.cub \
 	           to=$(OUTPUT)/test_himos_polar_070508.img bits=8 minper=0.5 maxper=99.5> /dev/null;
 	catlab from=$(OUTPUT)/test_himos_polar_070508.img \
-		> $(OUTPUT)/test_himos_polar_070508_imglabels.pvl;
+		to=$(OUTPUT)/test_himos_polar_070508_imglabels.pvl > /dev/null;
 	pds2isis from=$(OUTPUT)/test_himos_polar_070508.img \
 	         to=$(OUTPUT)/test_himos_polar_070508_reimport.cub > /dev/null;
 	rm $(OUTPUT)/test_himos_polar_070508.img;
