--- a/isis/src/mro/apps/marciflip/tsts/default/Makefile
+++ b/isis/src/mro/apps/marciflip/tsts/default/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/T02_001002_1200_MC_00N284W.cub \
 	TO=$(OUTPUT)/flipped.cub > /dev/null;
-	catlab FROM=$(OUTPUT)/flipped.cub > $(OUTPUT)/flipped.pvl;
+	catlab FROM=$(OUTPUT)/flipped.cub to=$(OUTPUT)/flipped.pvl > /dev/null;
