--- a/isis/src/newhorizons/apps/lorri2isis/tsts/default/Makefile
+++ b/isis/src/newhorizons/apps/lorri2isis/tsts/default/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/lor_0034974380_0x630_sci_1.fit \
 	  to=$(OUTPUT)/lor_0034974380_0x630_sci_1_Truth.cub \
 	  > /dev/null;
-	catlab from=$(OUTPUT)/lor_0034974380_0x630_sci_1_Truth.cub > \
-	  $(OUTPUT)/lor_0034974380_0x630_sci_1_Truth.pvl;
+	catlab from=$(OUTPUT)/lor_0034974380_0x630_sci_1_Truth.cub \
+	  to=$(OUTPUT)/lor_0034974380_0x630_sci_1_Truth.pvl> /dev/null;
 
 
