Vimscal now adds a RadiometricCalibration group to the output cube labels which contains calibration files & parameters.  The Cassini/Vims team has also released a new performance model calibration file.  Fixes #2055.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5756 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/apps/vimscal/tsts/default/Makefile
+++ b/isis/src/cassini/apps/vimscal/tsts/default/Makefile
@@ -8,9 +8,18 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/v1570021638_1.ir.cub \
 	TO=$(OUTPUT)/v1570021638_1.ir.iof.cal.cub > /dev/null;
+	catlab FROM=$(OUTPUT)/v1570021638_1.ir.iof.cal.cub \
+	to=$(OUTPUT)/v1570021638_1.ir.iof.cal.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/v1570021638_1.vis.cub \
 	TO=$(OUTPUT)/v1570021638_1.vis.iof.cal.cub > /dev/null;
+	catlab FROM=$(OUTPUT)/v1570021638_1.vis.iof.cal.cub \
+	to=$(OUTPUT)/v1570021638_1.vis.iof.cal.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/v1570021638_1.ir.cub \
 	TO=$(OUTPUT)/v1570021638_1.ir.spec.cal.cub units=specenergy > /dev/null;
+	catlab FROM=$(OUTPUT)/v1570021638_1.ir.spec.cal.cub \
+	to=$(OUTPUT)/v1570021638_1.ir.spec.cal.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/v1570021638_1.vis.cub \
 	TO=$(OUTPUT)/v1570021638_1.vis.spec.cal.cub units=specenergy > /dev/null;
+	catlab FROM=$(OUTPUT)/v1570021638_1.vis.spec.cal.cub \
+	to=$(OUTPUT)/v1570021638_1.vis.spec.cal.pvl > /dev/null;
+
