--- a/isis/src/cassini/apps/vimscal/tsts/defaultsolarcoef/Makefile
+++ b/isis/src/cassini/apps/vimscal/tsts/defaultsolarcoef/Makefile
@@ -13,17 +13,27 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/V1515948001_1.ir.cub \
 	  to=$(OUTPUT)/V1515948001_1.ir.cal1.cub UNITS=IOF \
-	  IRORIGDARK=false DARK=true > /dev/null; \
+	  IRORIGDARK=false DARK=true > /dev/null;
+	catlab from=$(OUTPUT)/V1515948001_1.ir.cal1.cub \
+	  TO=$(OUTPUT)/V1515948001_1.ir.cal1.pvl > /dev/null;
 	$(APPNAME) from=$(INPUT)/V1515948001_1.ir.cub \
 	  to=$(OUTPUT)/V1515948001_1.ir.cal2.cub UNITS=SPECENERGY \
-	  IRORIGDARK=false DARK=true > /dev/null; \
+	  IRORIGDARK=false DARK=true > /dev/null;
+	catlab from=$(OUTPUT)/V1515948001_1.ir.cal2.cub \
+	  TO=$(OUTPUT)/V1515948001_1.ir.cal2.pvl < /dev/null;
 	$(APPNAME) from=$(INPUT)/V1515948001_1.ir.cub \
 	  to=$(OUTPUT)/V1515948001_1.ir.cal3.cub UNITS=IOF \
-	  IRORIGDARK=true DARK=true > /dev/null; \
+	  IRORIGDARK=true DARK=true > /dev/null;
+	catlab from=$(OUTPUT)/V1515948001_1.ir.cal3.cub \
+	  TO=$(OUTPUT)/V1515948001_1.ir.cal3.pvl > /dev/null;
 	$(APPNAME) from=$(INPUT)/V1515948001_1.ir.cub \
 	  to=$(OUTPUT)/V1515948001_1.ir.cal4.cub UNITS=IOF \
-	  IRORIGDARK=true DARK=false > /dev/null; \
+	  IRORIGDARK=true DARK=false > /dev/null;
+	catlab from=$(OUTPUT)/V1515948001_1.ir.cal4.cub \
+	  TO=$(OUTPUT)/V1515948001_1.ir.cal4.pvl > /dev/null;
 	$(APPNAME) from=$(INPUT)/V1515948001_1.ir.cub \
 	  to=$(OUTPUT)/V1515948001_1.ir.cal5.cub UNITS=IOF \
 	  IRORIGDARK=false DARK=false > /dev/null;
+	catlab from=$(OUTPUT)/V1515948001_1.ir.cal5.cub \
+	  TO=$(OUTPUT)/V1515948001_1.ir.cal5.pvl > /dev/null;
 
