--- a/isis/src/cassini/apps/vimscal/tsts/irdark/Makefile
+++ b/isis/src/cassini/apps/vimscal/tsts/irdark/Makefile
@@ -9,6 +9,10 @@ commands:
 	$(APPNAME) FROM=$(INPUT)/V1483214528_1.ir.cub \
 	  TO=$(OUTPUT)/V1483214528_1.ir.avgdark.cal.cub \
 	  irorigdark=false > /dev/null;
+	catlab from=$(OUTPUT)/V1483214528_1.ir.avgdark.cal.cub \
+	  TO=$(OUTPUT)/V1483214528_1.ir.avgdark.cal.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/V1483214528_1.ir.cub \
 	  TO=$(OUTPUT)/V1483214528_1.ir.origdark.cal.cub \
 	  irorigdark=true > /dev/null;
+	catlab from=$(OUTPUT)/V1483214528_1.ir.origdark.cal.cub \
+	  TO=$(OUTPUT)/V1483214528_1.ir.origdark.cal.pvl > /dev/null;
