--- a/isis/src/cassini/apps/vimscal/tsts/nodark/Makefile
+++ b/isis/src/cassini/apps/vimscal/tsts/nodark/Makefile
@@ -6,5 +6,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/V1483214528_1.ir.cub \
-	  TO=$(OUTPUT)/V1483214528_1.ir.nodark.cal.cub \
-	  dark=false > /dev/null;
+	  TO=$(OUTPUT)/V1483214528_1.ir.nodark.cal.cub dark=false > /dev/null;
+	catlab from=$(OUTPUT)/V1483214528_1.ir.nodark.cal.cub \
+	  TO=$(OUTPUT)/V1483214528_1.ir.nodark.cal.pvl > /dev/null;
+
