First commit of Chandrayaan M3 code. Ref#1553, Ref#167701678
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5761 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/3rdParty/Makefile
+++ b/isis/3rdParty/Makefile
@@ -73,7 +73,7 @@ plugins:
 
 
 clean:
-	rm -f lib/lib*.so* lib/lib*.dylib
+	rm -f lib/lib*.so* lib/lib*.dylib lib/lib*.a
 	cd lib && rm -rf *.framework
 	@for plugs in plugins/*; do \
 	  if [ -d $$plugs -a $$plugs != "plugins/CVS" ]; \
